# autofood

./: .env.example  Cargo.toml  README.md  groceries.json
src/: main.rs
